--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -83,7 +83,6 @@
   = render partial: 'trips/double_booked_trip_dialog'
   :javascript
     $(document).ready(function(){
-      // makeDatePickers(); // DEPRECATED
 
       var doubleBookedTripRowHtml = "#{escape_javascript(render partial: 'double_booked_trip_row')}"
       var dbh = new DoubleBookedTripsHelper({
@@ -92,7 +91,7 @@
         form: $('form.trip_form'),
         modal: $('#doubleBookedTripDialog'),
         table: $('#doubleBookedTripDialog #double-booked-trips-table')
-      })
+      });
 
       // On form submit, check for potential double-booking before submitting form
       dbh.form.submit(function(e) {
@@ -118,37 +117,4 @@
       });
     });
 
-:javascript
-  $(function() {
-    function update_time(time_field) {
-      var hour = time_field.find('.time_field_hour').val().trim();
-      var min = time_field.find('.time_field_minute').val().trim();
-      var am_pm = time_field.find('.am-pm').text().trim();
-
-      if(hour && parseInt(hour) >= 12) {
-        var adjusted_hour = parseInt(hour);
-        am_pm = 'PM';
-        if(adjusted_hour > 12) {
-          hour =  adjusted_hour - 12;
-        }
-      }
-
-      time_field.find('.time_field_value').val(hour + ":" + min + " " + am_pm);      
-    }
-
-    $(document).on('click', 'button.am-pm', function() {
-      if($(this).attr('data-is-pm') != 'false') {
-        $(this).attr('data-is-pm', 'false');
-        $(this).text('AM');
-      } else {
-        $(this).attr('data-is-pm', 'true');
-        $(this).text('PM');
-      }
-
-      update_time($(this).parents('.time-field'));
-    });
-
-    $(document).on('change', 'input.time_field_hour, input.time_field_minute', function() {
-      update_time($(this).parents('.time-field'));
-    });
-  });
+= render 'shared/time_inputs_javascript' if edit_mode != :show
