--- a/app/views/runs/_row.html.haml
+++ b/app/views/runs/_row.html.haml
@@ -8,10 +8,10 @@
   %td= run.date.to_s(:long)
   %td= run.scheduled_start_time.try(:to_s,:time_only)
   %td= run.scheduled_end_time.try(:to_s,:time_only)
-  - vehicle_overdue_check = get_vehicle_warnings(run.vehicle, run.date)
+  - vehicle_overdue_check = get_vehicle_warnings(run.vehicle, run)
   %td{class: vehicle_overdue_check[:class_name], title: vehicle_overdue_check[:tips] }
     = run.vehicle ? run.vehicle.name : translate_helper('no_vehicle')
-  - driver_overdue_check = get_driver_warnings(run.driver, run.date)
+  - driver_overdue_check = get_driver_warnings(run.driver, run)
   %td{class: driver_overdue_check[:class_name], title: driver_overdue_check[:tips] }
     = run.driver  ? run.driver.user_name : translate_helper('no_driver')
   %td= run.complete ? translate_helper('complete') : translate_helper('incomplete')
