--- a/app/views/trips_runs/_runs_table.html.haml
+++ b/app/views/trips_runs/_runs_table.html.haml
@@ -23,10 +23,10 @@
         %td
           = link_to run.name, '#', data: {run_id: run.id}, class: 'run_name_link non_jump_top', title: 'Click to open manifest'
         %td= run.repeating_run_id.present? ? translate_helper(:run_trip_type_recurring) : translate_helper(:run_trip_type_daily)
-        - vehicle_overdue_check = get_vehicle_warnings(run.vehicle, run.date)
+        - vehicle_overdue_check = get_vehicle_warnings(run.vehicle, run)
         %td{class: vehicle_overdue_check[:class_name], title: vehicle_overdue_check[:tips] }
           = link_to run.vehicle.try(:name), vehicle_path(run.vehicle), target: '_blank' if run.vehicle
-        - driver_overdue_check = get_driver_warnings(run.driver, run.date)
+        - driver_overdue_check = get_driver_warnings(run.driver, run)
         %td{class: driver_overdue_check[:class_name], title: driver_overdue_check[:tips] }
           = link_to run.driver.try(:user_name), driver_path(run.driver), target: '_blank' if run.driver
         %td= format_time_for_listing run.scheduled_start_time
