--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
   <div id="crossbar">
     <div class="wrap selfclear">
       <ul id="primary-nav" class="selfclear">
-        <% if show_scheduling? %><li class="trips_runs"><%= link_to translate_helper("application_trips_runs_link_text"), trips_runs_path %></li><% end %>
+        <% if show_scheduling? %><li class="dispatchers"><%= link_to translate_helper("application_trips_runs_link_text"), dispatchers_path %></li><% end %>
         <% if show_scheduling? %><li class="trips"><%= link_to translate_helper("application_trips_link_text"), trips_path %></li><% end %>
         <% if show_scheduling? %><li class="runs"><%= link_to translate_helper("application_runs_link_text"), runs_path %></li><% end %>
         <% if show_scheduling? %><li class="customers"><%= link_to translate_helper("application_customers_link_text"), customers_path %></li><% end %>
