--- a/app/views/runs/_form_header.html.haml
+++ b/app/views/runs/_form_header.html.haml
@@ -2,17 +2,17 @@
   - if edit_mode == :new
     .pull-right
       = f.submit translate_helper(:save), class: 'btn action-button'
-      = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? trips_runs_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
+      = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
     %h1
       = translate_helper("new_run")
   - else
     .pull-right
       - if edit_mode == :edit
         = f.submit translate_helper(:update), class: 'btn action-button'
-        = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? trips_runs_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
+        = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
       - else
         = link_to(translate_helper("delete"), @run, data: {:confirm => translate_helper("delete_run_confirm")}, :method => :delete, :id => 'run_delete', :class=>'btn action-button btn-danger') if !@run.new_record? && can?(:destroy, @run)
         = link_to translate_helper("edit"), edit_run_path(@run), :class=>'btn action-button' if !@run.new_record? && can?(:edit, @run)
-        = link_to translate_helper(:back), (params[:from_dispatch] == 'true' ? trips_runs_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
+        = link_to translate_helper(:back), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
     %h1
       = translate_helper("run")
