--- a/app/views/dispatchers/_runs_table.html.haml
+++ b/app/views/dispatchers/_runs_table.html.haml
@@ -35,6 +35,9 @@
         %td
           = link_to run_path(run, from_dispatch: true), style: 'padding-right: 5px;', title: "View details" do 
             %i.fa.fa-external-link
+          - if run.repeating_run_id.present?
+            = link_to recurring_dispatchers_path(run_id: run.repeating_run_id), style: 'padding-right: 5px;', title: "View Subscription Run Template" do 
+              %i.fa.fa-repeat
           - if can?(:new, Trip)
             = link_to new_trip_path(from_dispatch: true, run_id: run.id), style: 'padding-right: 5px;', title: "New Trip" do 
               %i.fa.fa-plus
