--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -160,6 +160,9 @@
     }
 
     var loaded_run_ids = get_loaded_run_id_array();
+    if(loaded_run_ids.indexOf(target_run_id) < 0) {
+      loaded_run_ids.push(target_run_id):
+    }
     if(loaded_run_ids.length > 0) {
       loaded_run_ids.forEach(function(run_id) {
         if(run_ids.indexOf(parseInt(run_id)) >= 0) {
