Add defensive code check

--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -161,7 +161,7 @@
 
     var loaded_run_ids = get_loaded_run_id_array();
     if(loaded_run_ids.indexOf(target_run_id) < 0) {
-      loaded_run_ids.push(target_run_id):
+      loaded_run_ids.push(target_run_id);
     }
     if(loaded_run_ids.length > 0) {
       loaded_run_ids.forEach(function(run_id) {
