Updates to dispatch page New Trip badge [RPII-343]

--- a/app/views/trips/notify_driver.js.haml
+++ b/app/views/trips/notify_driver.js.haml
@@ -3,3 +3,8 @@
   $('tr[data-trip-id="#{@trip.id}"] .change-trip-driver-notified input[type=checkbox]').val(#{@prev_driver_notified});
 - else
   $('tr[data-trip-id="#{@trip.id}"] .change-trip-driver-notified input[type=checkbox]').prop("checked", #{@trip.driver_notified});
+  - is_new = !@trip.driver_notified && @trip.date == Date.today
+  - if is_new
+    $('tr[data-trip-id="#{@trip.id}"] span.new-trip-badge').show();
+  - else
+    $('tr[data-trip-id="#{@trip.id}"] span.new-trip-badge').hide();
