--- a/app/views/dispatchers/_run_manifest_table.html.haml
+++ b/app/views/dispatchers/_run_manifest_table.html.haml
@@ -1,3 +1,7 @@
+:css
+  .new-trip-badge {
+    background-color: red;
+  }
 %table.table.table-striped.table-bordered.run-manifest-table{style: 'max-height: 300px; overflow-y: auto;'}
   %thead
     %tr
@@ -31,9 +35,9 @@
           %td= itin[:is_recurring] ? 'Recur' : 'Daily'
           %td{style: 'white-space: nowrap;'}
             = itin[:leg_flag] == 1 ? 'PU' : 'DO'
-            - if itin[:is_new]
-              %span.badge.new-trip-badge.pull-right{style: 'background-color: red;'}
-                New
+            - is_new = !trip.driver_notified && trip.date == Date.today
+            %span.badge.new-trip-badge.pull-right{style: (is_new ? "" : "display: none;")}
+              New
           %td= itin[:customer]
           %td= itin[:address]
           %td= format_time_for_listing(itin[:time])
