--- a/app/views/dispatchers/_unassigned_trips_table.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_table.html.haml
@@ -30,7 +30,7 @@
         %td
           = trip.customer.name
           - if trip.repeating_trip_id.present?
-            %span.label.label-info
+            %span.label.label-info.pull-right
               Recur
         %td= simple_format [trip.customer.phone_number_1, trip.customer.phone_number_2].compact.join('<br>')
         %td= format_time_for_listing(trip.pickup_time)
