--- a/app/views/dispatchers/_run_manifest_table.html.haml
+++ b/app/views/dispatchers/_run_manifest_table.html.haml
@@ -33,13 +33,14 @@
             %input.trip-selected{type: "checkbox"}
           %td{style: 'white-space: nowrap;'}
             = itin[:leg_flag] == 1 ? 'PU' : 'DO'
+            - is_new = !trip.driver_notified && trip.date == Date.today
+            %span.badge.new-trip-badge{style: (is_new ? "" : "display: none;")}
+              New
+
             .pull-right
               - if itin[:is_recurring]
                 %span.label.label-info
                   Recur
-              - is_new = !trip.driver_notified && trip.date == Date.today
-              %span.badge.new-trip-badge{style: (is_new ? "" : "display: none;")}
-                New
           %td= itin[:customer]
           %td= itin[:address]
           %td= format_time_for_listing(itin[:time])
@@ -47,7 +48,12 @@
           %td= itin[:capacity]
           %td= itin[:fare]
           %td= itin[:comments]
-          %td= itin[:result]
+          %td
+            - if TripResult::CANCEL_CODES_BUT_KEEP_RUN.include?(trip.trip_result.try(:code))
+              %span.label.label-danger
+                = trip.trip_result.name
+            - else
+              = trip.trip_result.name
           %td= simple_format(itin[:phone].join('<br>')) unless itin[:phone].empty?
           %td
             = form_for trip, url: trip_notify_driver_path(trip), remote: true, method: :patch, html: { class: 'change-trip-driver-notified' } do |f|
