--- a/app/views/runs/_row.html.haml
+++ b/app/views/runs/_row.html.haml
@@ -4,7 +4,12 @@
   %td
     -if can? :show, run
       = link_to translate_helper("view"), run_path(run)
-  %td= run.name
+  %td
+    = run.name
+    - if run.cancelled?
+      .pull-right
+        %span.label.label-danger
+          Cancelled
   %td= run.date.to_s(:long)
   %td= run.scheduled_start_time.try(:to_s,:time_only)
   %td= run.scheduled_end_time.try(:to_s,:time_only)
