--- a/app/views/trips/_list.html.haml
+++ b/app/views/trips/_list.html.haml
@@ -1,20 +1,21 @@
 %table#tripsTable
-  %tr
-    -# first two columns are for select and view link
-    %th
-      %input.master-select-checkbox{type: "checkbox"}
-    %th
-    %th= translate_helper("pickup_date_column")
-    %th= translate_helper("customer_column")
-    %th= translate_helper("customer_phone_number_column")
-    %th= translate_helper("trip_direction_column")
-    %th= translate_helper("pickup_address_column")
-    %th= translate_helper("pickup_time_column")
-    %th= translate_helper("dropoff_address_column")
-    %th= translate_helper("appointment_time_column")
-    %th= translate_helper("trip_status_column")
-    %th= translate_helper("trip_called_back_column")
-    %th= translate_helper("trip_result_column")
-
-  - @trips.each do |trip|
-    = render "trips/row", :trip => trip
+  %thead
+    %tr
+      -# first two columns are for select and view link
+      %th
+        %input.master-select-checkbox{type: "checkbox"}
+      %th
+      %th= translate_helper("pickup_date_column")
+      %th= translate_helper("customer_column")
+      %th= translate_helper("customer_phone_number_column")
+      %th= translate_helper("trip_direction_column")
+      %th= translate_helper("pickup_address_column")
+      %th= translate_helper("pickup_time_column")
+      %th= translate_helper("dropoff_address_column")
+      %th= translate_helper("appointment_time_column")
+      %th= translate_helper("trip_status_column")
+      %th= translate_helper("trip_called_back_column")
+      %th= translate_helper("trip_result_column")
+  %tbody
+    - @trips.each do |trip|
+      = render "trips/row", :trip => trip
